# istio-test

./: .gitignore  cleanup.sh  deploy-by-skaffold.sh  deploy-istio.sh  istio-skaffold.yaml  skaffold.yaml
core/: dockerfile  main.py  pyproject.toml  settings.py
core/api/: __init__.py  core_api.py
core/exceptions/: exceptions.py
core/framework/: logger.py
core/sqs/: message_sender.py  sqs_session.py
daemon/: build.gradle.kts
daemon/src/main/resources/: application.yml  schema.sql
istio-demo/: values.yaml
istio-demo/templates/1/: configmap.yaml  namespace.yaml  serviceaccount.yaml
istio-demo/templates/2/: core-deployment.yaml  core-service.yaml  daemon-deployment.yaml  daemon-service.yaml  localstack-deployment.yaml  localstack-service.yaml  postgres-deployment.yaml  postgres-service.yaml
istio-msa-demo/: README.md  cleanup.sh  deploy-by-skaffold.sh  istio-skaffold.yaml  skaffold.yaml
istio-msa-demo/addons/: kiali.yaml
istio-msa-demo/core/: main.py  settings.py
istio-msa-demo/core/api/: core_api.py
istio-msa-demo/daemon/: build.gradle.kts
istio-msa-demo/istio-demo/: Chart.yaml
istio-msa-demo/istio-demo/templates/1/: namespace.yaml
istio-msa-demo/istio-demo/templates/2/: core-deployment.yaml  (+2 more)
istio-msa-demo/istio/values/: values.yaml
istio/values/: values-kiali.yaml
update-policy-demo/: clean-up.sh  deploy-with-istio.sh  skaffold.yaml
update-policy-demo/bookinfo/argo-test/: details.yaml  productpage.yaml  ratings.yaml  reviews.yaml
update-policy-demo/bookinfo/manifests/: bookinfo-gateway.yaml  bookinfo.yaml  istioOperator.yaml
(+20 files in other folders)
